# nickel

./: .gitignore  README.md  example-data  gendata.pl  gold.cabal  nickel.cabal
app/: Main.hs
src/: Grouped.hs  Main.hs
src/Gold/: Account.hs  Expense.hs  Grouped.hs  Main.hs  Util.hs  WeeklyChart.hs
src/Nickel/: Account.hs  Main.hs  Util.hs  WeeklyChart.hs
test/: Spec.hs
test/Gold/: AccountSpec.hs  ExpenseSpec.hs  MainSpec.hs  TestUtil.hs  UtilSpec.hs  WeeklyChartSpec.hs
test/Gold/Main/: Spec.hs
test/Nickel/: AccountSpec.hs  MainSpec.hs  TestUtil.hs  UtilSpec.hs  WeeklyChartSpec.hs
tst/: Main.hs
tst/Gold/Main/: Test.hs
