name: gold
version: 0
--category:
--synopsis:
--homepage:
author: Viktor Tanyi
maintainer: Viktor Tanyi <tanyi.viktor@gmail.com>
--license: BSD3
--license-file: LICENSE
--description:
build-type: Simple
cabal-version: >=1.10

--source-repository head
  --type: git
  --location:

executable gold
  hs-source-dirs: src
  main-is: Main.hs
  --other-modules:
  ghc-options: -Wall
  --other-extensions:
  build-depends:
    base >=4.6 && <5,
    containers,
    text,
    time,
    HList,
    data-default-class,
    lens,
    Chart,
    Chart-diagrams,
    colour,
    parsec,
    hspec,
    QuickCheck
  default-language: Haskell2010
