name: gold
version: 0
--category:
--synopsis:
--homepage:
author: Viktor Tanyi
maintainer: Viktor Tanyi <tanyi.viktor@gmail.com>
--license: BSD3
--license-file: LICENSE
--description:
build-type: Simple
cabal-version: >=1.10

--source-repository head
  --type: git
  --location:

library
  hs-source-dirs: src
  exposed-modules: Gold.Main, Gold.Grouped
  ghc-options: -Wall -O2
  build-depends:
    base,
    containers,
    text,
    time,
    HList,
    data-default-class,
    lens,
    Chart,
    --Chart-diagrams,
    Chart-cairo,
    colour,
    parsec
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: tst
  main-is: Main.hs
  other-modules: Gold.Main.Test
  ghc-options: -Wall
  build-depends:
    gold,
    base,
    hspec,
    QuickCheck,
    time
  default-language: Haskell2010

executable gold
  main-is: Main.hs
  ghc-options: -Wall -O2
  build-depends: base, gold
  default-language: Haskell2010
