name: gold
version: 0
--category:
--synopsis:
--homepage:
author: Viktor Tanyi
maintainer: Viktor Tanyi <tanyi.viktor@gmail.com>
--license: BSD3
--license-file: LICENSE
--description:
build-type: Simple
cabal-version: >=1.10

--source-repository head
  --type: git
  --location:

library
  hs-source-dirs: src
  exposed-modules:
    Gold.Main,
    Gold.Account,
    Gold.Util,
    Gold.WeeklyChart
  ghc-options: -Wall -O2
  build-depends:
    base,
    containers,
    text,
    time,
    HList,
    data-default-class,
    lens,
    Chart,
    Chart-cairo,
    colour,
    parsec
  default-language: Haskell2010

executable gold
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, gold
  default-language: Haskell2010

test-suite gold-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Gold.MainSpec,
    Gold.AccountSpec,
    Gold.UtilSpec,
    Gold.WeeklyChartSpec
  ghc-options: -threaded -rtsopts -with-rtsopts=-N 
  build-depends:
    base,
    gold,
    hspec,
    QuickCheck,
    containers,
    time
  default-language: Haskell2010

